<resources>
    <string name="app_name">SEO</string>
    <string name="v_fab_tech">V-FAB TECH</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="sign_up">SIGN UP</string>
    <string name="text1">Don\'t have an account? Sign up below.</string>
    <string name="already_have_an_account_log_in_below">Already have an account? Log in below.</string>
</resources>