<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/v_fab_tech"
        android:id="@+id/title"
        android:layout_marginTop="30dp"
        android:textSize="25sp"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/logo"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/todo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:id="@+id/name_id"
        android:layout_below="@id/logo"
        android:background="@drawable/background_init"
        android:padding="20dp"
        android:hint="@string/name"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:autofillHints="Name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:id="@+id/email_id"
        android:layout_below="@id/name_id"
        android:background="@drawable/background_init"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/email"
        android:autofillHints="emailAddress" />

    <EditText
        android:autofillHints="password"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:id="@+id/pass_id"
        android:layout_below="@id/email_id"
        android:background="@drawable/background_init"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/password"/>


    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:id="@+id/sign_btn"
        android:layout_below="@id/pass_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_init"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_btn"
        android:id="@+id/sign_text"
        android:text="@string/already_have_an_account_log_in_below"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:id="@+id/login"
        android:layout_below="@id/sign_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_init"/>

</RelativeLayout>